--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
     "@synthetixio/synpress": "^3.7.2-beta.10",
     "cypress": "^12.17.3",
     "hardhat": "^2.22.1"
+  },
+  "dependencies": {
+    "@openzeppelin/hardhat-upgrades": "^3.0.5"
   }
 }
